# tmux-mobile

./: .dockerignore  .gcloudignore  .gitignore  .impeccable.md  CLAUDE.md  Dockerfile  README.md  package-lock.json  package.json  server.mjs  tsconfig.json  vite.config.ts  wrangler.toml
client/: index.html
docs/: DETECTION.md  PRODUCT_CONTEXT.md  agent-notification-hooks.md  architecture.md  fargate-deploy.md  join-network.md  session-transcript-archive.md
lib/: agent-launch-command.mjs  agent-mode.mjs  agent-ntfy.mjs  agent.mjs  anchor-stamp.mjs  artifact-path.mjs  artifact-storage.mjs  ask-question-keys.mjs  ask-question.mjs  backend.mjs  comment-index.mjs  comments.mjs  connector-lock.mjs  hub.mjs  pane-mode.mjs  pin-index.mjs  pins.mjs  protocol.mjs  readfile-deny.mjs  revision.mjs  transcript-archive.mjs  transcript-discovery.mjs  transcript-events.mjs  transcript-publisher.mjs  transcript-replicator.mjs  turn-detection.mjs  user-card-stars.mjs  user-snippets.mjs  voice-config.mjs  window-metadata.mjs  window-runtime.mjs
memory/: 2026-06-02-cloudrun-voice-openai-key.md
public/: agent-link.mjs  app.js  card-stars.js  command-center-grace.mjs  command-center.css  command-center.html  command-center.js  fetch-timeout.js  index.html  linkify.js  markdown.js  mermaid.js  notify-sound.js  realtime-read.js  snippets.js  spa-router.mjs  spa.html  styles.css  viewer-navigation.js  window-id.js
scripts/: aws-setup.sh  aws-teardown.sh  build-connector.mjs  install-connector.sh  push-image.sh  (+3 more)
tools/terminal-tui/: Cargo.toml
tools/terminal-tui/src/: main.rs
(+94 files in other folders)
